Fix: home.html 수정

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -61,19 +61,16 @@
                 <div class="title">예산</div>
                 <div class="value">430,000원</div>
                 <div class="desc">예산 총합</div>
-                <div><button class="btn">예산 관리</button></div>
             </div>
             <div class="card">
                 <div class="title">예상 가용금액</div>
                 <div class="value">430,000원</div>
-                <div class="desc">예산 총합</div>
-                <div><button class="btn">예산 - 고정지출</button></div>
+                <div class="desc">예산 - 고정지출</div>
             </div>
             <div class="card">
                 <div class="title">차이</div>
                 <div class="value">430,000원</div>
                 <div class="desc">가용금액 - 예상 가용금액</div>
-                <div><button class="btn">예산 관리</button></div>
             </div>
         </section>
 
