Design: 파비콘 추가

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg" sizes="32x32" href="/icon/favicon.svg">
     <title>가용 - 얼마나 쓸 수 있지?</title>
     <!-- SEO 메타태그 -->
     <meta name="description" content="가용금액 관리 및 예산지출관리 애플리케이션 - 개인 자산관리를 편리하게">
@@ -23,6 +24,7 @@
     <link rel="stylesheet" href="/css/inc/drawer.css">
     <link rel="stylesheet" href="/css/inc/button.css">
     <link rel="stylesheet" href="/css/inc/layout.css">
+
     <script type="module" src="/js/layout.js" defer></script>
 
 </head>
