--- a/src/main/resources/static/css/inc/button.css
+++ b/src/main/resources/static/css/inc/button.css
@@ -3,10 +3,24 @@
     align-items: center;
     justify-content: center;
     padding: 4px 12px;
-    width: 100%;
     box-shadow: 0 2px 8px -1px rgba(18, 22, 33, 0.1);
     cursor: pointer;
     border-radius: 5px;
     background-color: var(--color-base-5);
     color: var(--color-base-1);
+    font-weight: 500;
+}
+
+.btn:active {
+    transform: scale(0.98);
+    opacity: 0;
+}
+
+.btn:active {
+    opacity: 1;
+    transition: opacity 0.2s;
+}
+
+.btn-size\:1 {
+    height: 26px;
 }
