Feat: layout.html 수정
- 링크 추가
- 주석추가

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,63 +23,69 @@
     <link rel="stylesheet" href="/css/inc/icon.css">
     <link rel="stylesheet" href="/css/inc/drawer.css">
     <link rel="stylesheet" href="/css/inc/button.css">
+    <link rel="stylesheet" href="/css/inc/form.css">
     <link rel="stylesheet" href="/css/inc/layout.css">
 
     <script type="module" src="/js/layout.js" defer></script>
 
 </head>
 <body>
-    <header class="d:flex gap:11 jc:space-between ai:center h:2 md:h:3 w:10p p:8" style=" box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);">
-        <h1 class="fs:13">가용</h1>
-        <div class="d:none md:d:flex fl-dir:column jc:space-between ai:end fl-grow:1 h:10p">
-            <nav>
-                <h1 class="d:none">top</h1>
-                <ul class="d:flex gap:5">
-                    <li sec:authorize="isAnonymous()"><a href="signin">로그인</a></li>
-                    <li sec:authorize="isAnonymous()"><a href="singup">회원가입</a></li>
-                    <li sec:authorize="isAuthenticated()">Jini님</li>
-                    <li sec:authorize="isAuthenticated()"><a href="singout">로그아웃</a></li>
-                </ul>
-            </nav>
-            <nav>
-                <h1 class="d:none">down</h1>
-                <ul class="d:flex gap:11 fs:10">
-                    <li><a href="">대시보드</a></li>
-                    <li><a href="">수입/지출</a></li>
-                    <li><a href="">예산</a></li>
-                    <li><a href="">고정지출</a></li>
-                    <li><a href="">통장</a></li>
-                    <li><a href="">카드</a></li>
-                    <li><a href="">카테고리</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="d:flex gap:6 md:d:none">
-            <div class="d:flex gap:2">
-                <div sec:authorize="isAnonymous()"><a href="signin" class="icon icon:signin">로그인</a></div>
-                <div sec:authorize="isAuthenticated()" class="fs:9">Jini님</div>
-                <div sec:authorize="isAuthenticated()"><a href="singout" class="icon icon:signout">로그아웃</a></div>
+    <!-- header -->
+    <header class="h:2 md:h:3 w:10p bg-color:base-1">
+        <div class="d:flex gap:11 jc:space-between ai:center w:10p p:8">
+            <h1 class="fs:13"><a href="/">가용</a></h1>
+            <div class="d:none md:d:flex fl-dir:column gap:3 jc:space-between ai:end fl-grow:1 h:10p">
+                <nav>
+                    <h1 class="d:none">top</h1>
+                    <ul class="d:flex gap:5">
+                        <li sec:authorize="isAnonymous()"><a href="/signin">로그인</a></li>
+                        <li sec:authorize="isAnonymous()"><a href="/signup">회원가입</a></li>
+                        <li sec:authorize="isAuthenticated()">Jini님</li>
+                        <li sec:authorize="isAuthenticated()"><a href="/signout">로그아웃</a></li>
+                    </ul>
+                </nav>
+                <nav>
+                    <h1 class="d:none">down</h1>
+                    <ul class="d:flex gap:11 fs:10">
+                        <li><a href="/">대시보드</a></li>
+                        <li><a href="/ledger">수입/지출</a></li>
+                        <li><a href="/budget">예산</a></li>
+                        <li><a href="/fixed">고정지출</a></li>
+                        <li><a href="/account">통장</a></li>
+                        <li><a href="/card">카드</a></li>
+                        <li><a href="/category">카테고리</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="drawer-btn icon icon:menu icon-size:7">메뉴</div>
+            <div class="d:flex gap:6 md:d:none">
+                <div class="d:flex gap:2">
+                    <div sec:authorize="isAnonymous()"><a href="/signin" class="icon icon:signin">로그인</a></div>
+                    <div sec:authorize="isAuthenticated()" class="fs:9">Jini님</div>
+                    <div sec:authorize="isAuthenticated()"><a href="/signout" class="icon icon:signout">로그아웃</a></div>
+                </div>
+                <div class="drawer-btn icon icon:menu icon-size:7">메뉴</div>
+            </div>
         </div>
     </header>
+    <!-- aside -->
     <aside class="drawer d:flex fl-dir:column gap:9 p:4">
         <div class="d:flex jc:space-between">
             <h1 class="fs:13">가용</h1>
             <div class="drawer-close icon icon:x">닫기</div>
         </div>
         <ul class="d:flex fl-dir:column gap:6 fs:9">
-            <li><a href="">대시보드</a></li>
-            <li><a href="">수입/지출</a></li>
-            <li><a href="">예산</a></li>
-            <li><a href="">고정지출</a></li>
-            <li><a href="">통장</a></li>
-            <li><a href="">카드</a></li>
-            <li><a href="">카테고리</a></li>
+            <li><a href="/">대시보드</a></li>
+            <li><a href="/ledger">수입/지출</a></li>
+            <li><a href="/budget">예산</a></li>
+            <li><a href="/fixed">고정지출</a></li>
+            <li><a href="/account">통장</a></li>
+            <li><a href="/card">카드</a></li>
+            <li><a href="/category">카테고리</a></li>
         </ul>
     </aside>
-    <!-- main 부분 -->
+    <!-- main -->
     <div layout:fragment="main">메인</div>
+    <!-- footer -->
     <footer class="w:10p p:8 bg-color:base-2">
         가용. All rights reserved.
     </footer>
