--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,28 +15,28 @@
                 <div class="title">가용금액</div>
                 <div class="value">430,000원</div>
                 <div class="desc">통장 잔고 - (지출 예정 비용 + 카드대금)</div>
-                <div><button class="btn">변동 수입/지출 관리</button></div>
+                <div><a href="/ledger" class="btn w:10p">변동 수입/지출 관리</a></div>
             </div>
 
             <div class="card">
                 <div class="title">미지출 고정비용</div>
                 <div class="value">430,000원</div>
                 <div class="desc">지출 예정인 고정 비용</div>
-                <div><button class="btn">고정지출 관리</button></div>
+                <div><a href="/fixed" class="btn w:10p">고정지출 관리</a></div>
             </div>
 
             <div class="card">
                 <div class="title">미결제 카드대금</div>
                 <div class="value">430,000원</div>
                 <div class="desc">지난 달 + 이번달 카드 대금 총합</div>
-                <div><button class="btn">카드 관리</button></div>
+                <div><a href="/card" class="btn w:10p">카드 관리</a></div>
             </div>
 
             <div class="card">
                 <div class="title">통장 잔고</div>
                 <div class="value">430,000원</div>
                 <div class="desc">모든 통장 잔고 총합</div>
-                <div><button class="btn">통장 관리</button></div>
+                <div><a href="/account" class="btn w:10p">통장 관리</a></div>
             </div>
         </section>
 
