Feat: 다크모드 추가

--- a/src/main/resources/static/css/inc/drawer.css
+++ b/src/main/resources/static/css/inc/drawer.css
@@ -1,6 +1,7 @@
 .drawer {
     --drawer-width: 288px;
-    --drawer-background-color: var(--color-base-1);
+    --drawer-background-color: var(--color-base-6);
+    --drawer-color: var(--color-base-2);
 
     --drawer-z-index: 1200;
 }
@@ -8,9 +9,14 @@
 .drawer {
     position: fixed;
     background-color: var(--drawer-background-color);
+    color: var(--drawer-color);
     z-index: var(--drawer-z-index);
     transition: transform 0.5s cubic-bezier(0.22, 1, 0.36, 1);
     will-change: transform;
+}
+
+.dark .drawer {
+    background-color: var(--color-base-9);
 }
 
 .drawer, /* default position */
