--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -10,7 +10,7 @@
 <body>
 <main layout:fragment="main">
     <section class="grid mt:8">
-        <h1 class="d:flex jc:space-between">4월 총 예산 : 2,300,000원 <span class="btn btn-size:1 bg-color:sub-1 fs:7">예산추가</span></h1>
+        <h1 class="d:flex jc:space-between">4월 총 예산 : 2,300,000원 <span class="btn btn-size:1 bg-color:main-2 fs:7">예산추가</span></h1>
         <div class="card">
             <div class="title">월급</div>
             <div class="value">2,300,000원</div>
@@ -41,7 +41,7 @@
                 <label class="fl-grow:1">
                     <span>일자</span>
                     <span class="d:flex fl-grow:1 ai:center">
-                    <span class="mr:2 color:base-6 fw:2">매달</span>
+                    <span class="mr:2 desc fw:2">매달</span>
                     <select name="incDd">
                         <option value="1">1일</option>
                         <option value="2">2일</option>
