--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
             <div class="card">
                 <div class="title">가용금액</div>
                 <div class="value">430,000원</div>
-                <div class="desc">통장 잔고 - (지출 예정 비용 + 카드대금)</div>
+                <div class="desc">잔고 - (지출 예정 + 카드대금)</div>
                 <div><a href="/ledger" class="btn w:10p">변동 수입/지출 관리</a></div>
             </div>
 
