--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -29,9 +29,9 @@
     <script type="module" src="/js/layout.js" defer></script>
 
 </head>
-<body>
+<body >
     <!-- header -->
-    <header class="h:2 md:h:3 w:10p bg-color:base-1">
+    <header class="h:2 md:h:3 w:10p">
         <div class="d:flex gap:11 jc:space-between ai:center w:10p p:8">
             <h1 class="fs:13"><a href="/">가용</a></h1>
             <div class="d:none md:d:flex fl-dir:column gap:3 jc:space-between ai:end fl-grow:1 h:10p">
@@ -71,7 +71,7 @@
     <aside class="drawer d:flex fl-dir:column gap:9 p:4">
         <div class="d:flex jc:space-between">
             <h1 class="fs:13">가용</h1>
-            <div class="drawer-close icon icon:x">닫기</div>
+            <div class="drawer-close icon icon:x icon-color:base-2">닫기</div>
         </div>
         <ul class="d:flex fl-dir:column gap:6 fs:9">
             <li><a href="/">대시보드</a></li>
@@ -86,7 +86,7 @@
     <!-- main -->
     <div layout:fragment="main">메인</div>
     <!-- footer -->
-    <footer class="w:10p p:8 bg-color:base-2">
+    <footer class="w:10p p:8 bg-color:base-9 color:base-2">
         가용. All rights reserved.
     </footer>
 </body>
