--- a/src/main/resources/static/css/inc/button.css
+++ b/src/main/resources/static/css/inc/button.css
@@ -6,11 +6,13 @@
     box-shadow: 0 2px 8px -1px rgba(18, 22, 33, 0.1);
     cursor: pointer;
     border-radius: 5px;
-    background-color: var(--color-base-5);
+
     color: var(--color-base-1);
     font-weight: 500;
 }
-
+.dark .btn{
+    background-color: var(--color-base-7);
+}
 .btn:active {
     transform: scale(0.98);
     opacity: 0;
