--- a/src/main/resources/static/css/inc/style.css
+++ b/src/main/resources/static/css/inc/style.css
@@ -13,15 +13,21 @@ body{
     flex-direction: column;
     align-items: center;
 
-    font-size: var(--font-size-6);
-    color: var(--color-base-9);
     background-color: var(--color-base-2);
-
+    font-size: var(--font-size-6);
 }
 
-.dark{
-    color: var(--color-base-2);
+* {
+    color: var(--color-base-9);
+}
+
+.dark {
     background-color: var(--color-base-9);
+}
+
+.dark *{
+    color: var(--color-base-2);
+
 }
 
  main{
@@ -41,7 +47,7 @@ body{
     }
 
     main{
-        gap: var(--gap-12);
+        gap: var(--gap-11);
         max-width: 1280px;
     }
 
