Design:대시보드 카드 버튼 없앰

--- a/src/main/resources/static/css/inc/root.css
+++ b/src/main/resources/static/css/inc/root.css
@@ -11,7 +11,7 @@
   --color-sub-2: #1f2e5d ;
   --color-sub-3: #1f2e5d ;
 
-  --color-accent-1: #F5665E;
+  --color-accent-1: #F67676;
   --color-accent-2: #ff9205;
   --color-accent-3: #feb900;
 
