--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,57 +11,68 @@
     <main layout:fragment="main">
         <section class="grid mt:8">
             <h1>2024년 4월 21일</h1>
-            <div class="card">
-                <div class="title">가용금액</div>
-                <div class="value">430,000원</div>
-                <div class="desc">잔고 - (지출 예정 + 카드대금)</div>
-                <div><a href="/ledger" class="btn w:10p">변동 수입/지출 관리</a></div>
-            </div>
+            <a href="/expense">
+                <div class="card">
+                    <div class="title">가용금액</div>
+                    <div class="value">430,000원</div>
+                    <div class="desc">잔고 - (지출 예정 비용 + 카드대금)</div>
+                </div>
+            </a>
 
-            <div class="card">
-                <div class="title">미지출 고정비용</div>
-                <div class="value">430,000원</div>
-                <div class="desc">지출 예정인 고정 비용</div>
-                <div><a href="/fixed" class="btn w:10p">고정지출 관리</a></div>
-            </div>
+            <a href="/fixed">
+                <div class="card">
+                    <div class="title">미지출 고정비용</div>
+                    <div class="value">430,000원</div>
+                    <div class="desc">지출 예정인 고정 비용</div>
+                </div>
+            </a>
 
-            <div class="card">
-                <div class="title">미결제 카드대금</div>
-                <div class="value">430,000원</div>
-                <div class="desc">지난 달 + 이번달 카드 대금 총합</div>
-                <div><a href="/card" class="btn w:10p">카드 관리</a></div>
-            </div>
+            <a href="/card">
+                <div class="card">
+                    <div class="title">미결제 카드대금</div>
+                    <div class="value">430,000원</div>
+                    <div class="desc">지난 달 + 이번 달 카드 대금 총합</div>
+                </div>
+            </a>
 
-            <div class="card">
-                <div class="title">통장 잔고</div>
-                <div class="value">430,000원</div>
-                <div class="desc">모든 통장 잔고 총합</div>
-                <div><a href="/account" class="btn w:10p">통장 관리</a></div>
-            </div>
+            <a href="/account">
+                <div class="card">
+                    <div class="title">통장 잔고</div>
+                    <div class="value">430,000원</div>
+                    <div class="desc">모든 통장 잔고 총합</div>
+                </div>
+            </a>
         </section>
 
         <section class="grid">
             <h1>수입/지출 정보</h1>
-            <div class="card">
-                <div class="title">총 수입</div>
-                <div class="value">430,000원</div>
-                <div class="desc">예산 + 그 외 수입</div>
-            </div>
-            <div class="card">
-                <div class="title">총 지출</div>
-                <div class="value">430,000원</div>
-                <div class="desc">고정 비용 + 이번 달 변동 지출</div>
-            </div>
+            <a href="/income">
+                <div class="card">
+                    <div class="title">총 수입</div>
+                    <div class="value">430,000원</div>
+                    <div class="desc">예산 + 그 외 수입</div>
+                </div>
+            </a>
+
+            <a href="/expense">
+                <div class="card">
+                    <div class="title">총 지출</div>
+                    <div class="value">430,000원</div>
+                    <div class="desc">고정 비용 + 이번 달 변동 지출</div>
+                </div>
+            </a>
 
         </section>
 
         <section class="grid">
             <h1>예산 정보</h1>
-            <div class="card">
-                <div class="title">예산</div>
-                <div class="value">430,000원</div>
-                <div class="desc">예산 총합</div>
-            </div>
+            <a href="/budget">
+                <div class="card">
+                    <div class="title">예산</div>
+                    <div class="value">430,000원</div>
+                    <div class="desc">예산 총합</div>
+                </div>
+            </a>
             <div class="card">
                 <div class="title">예상 가용금액</div>
                 <div class="value">430,000원</div>
