Fix: drawer 색상 css 적용 안됨 해결

--- a/src/main/resources/static/css/inc/drawer.css
+++ b/src/main/resources/static/css/inc/drawer.css
@@ -15,6 +15,10 @@
     will-change: transform;
 }
 
+.drawer *{
+    color: var(--drawer-color);
+}
+
 .dark .drawer {
     background-color: var(--color-base-9);
 }
