--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -20,19 +20,21 @@
             <div class="title">총 예산</div>
             <div class="value">2,300,000원</div>
         </div>
-        <div class="card">
-            <div class="title">월급</div>
-            <div class="value">2,300,000원</div>
-            <div class="desc">근로소득</div>
-            <div class="d:flex jc:end gap:2">
-                <div><button class="btn btn-size:1">수정</button></div>
-                <div><button class="btn btn-size:1 bg-color:accent-1">삭제</button></div>
+    </section>
+
+    <section class="d:flex fl-dir:column gap:2">
+        <h1 class="d:none">예산 내역</h1>
+        <div class="card p:4 fl-dir:row ai:center w:10p">
+            <div class="fl-grow:1 d:flex fl-dir:column gap:4">
+                <div class="title fw:2">월급</div>
+                <div class="desc fs:5">매달 10일</div>
             </div>
+            <div class="title fw:2">250,000원</div>
         </div>
     </section>
 
     <section class="card">
-        <h1 class="title">예산수정</h1>
+        <h1 class="title">예산 추가</h1>
         <form action="/budget" method="post" class="form form:underline grid">
             <label>
                 <span>이름</span>
@@ -51,7 +53,7 @@
                     <span>일자</span>
                     <span class="d:flex fl-grow:1 ai:center">
                     <span class="mr:2 desc fw:2">매달</span>
-                    <select name="incDd">
+                    <select name="dd">
                         <option value="1">1일</option>
                         <option value="2">2일</option>
                         <option value="3">3일</option>
