--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -76,7 +76,7 @@
             <div class="card">
                 <div class="title">예상 가용금액</div>
                 <div class="value">430,000원</div>
-                <div class="desc">예산 - 고정지출</div>
+                <div class="desc">예산 - 고정비용</div>
             </div>
             <div class="card">
                 <div class="title">차이</div>
