--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -51,7 +51,7 @@
                         <li><a href="/">대시보드</a></li>
                         <li><a href="/expense">지출</a></li>
                         <li><a href="/income">수입</a></li>
-                        <li><a href="/fixed">고정지출</a></li>
+                        <li><a href="/fixed">고정비용</a></li>
                         <li><a href="/budget">예산</a></li>
                         <li><a href="/account">통장</a></li>
                         <li><a href="/card">카드</a></li>
@@ -79,7 +79,7 @@
             <li><a href="/">대시보드</a></li>
             <li><a href="/expense">지출</a></li>
             <li><a href="/income">수입</a></li>
-            <li><a href="/fixed">고정지출</a></li>
+            <li><a href="/fixed">고정비용</a></li>
             <li><a href="/budget">예산</a></li>
             <li><a href="/account">통장</a></li>
             <li><a href="/card">카드</a></li>
