Feat: 고정비용 퍼블리싱

--- a/src/main/resources/static/css/inc/root.css
+++ b/src/main/resources/static/css/inc/root.css
@@ -7,7 +7,7 @@
   --color-main-2: #E9A6B0;
   --color-main-3: #C86B85;
 
-  --color-sub-1: #FFF3F7 ;
+  --color-sub-1: #f6a728;
   --color-sub-2: #1f2e5d ;
   --color-sub-3: #1f2e5d ;
 
