--- a/src/main/resources/templates/income.html
+++ b/src/main/resources/templates/income.html
@@ -39,10 +39,10 @@
     <section class="d:flex fl-dir:column gap:8">
         <h1 class="d:none">수입 내역</h1>
         <div class="card p:6 fl-dir:row gap:2 fs:5">
-            <div class="p:1 pl:4 pr:4 bd bd-color:base-3 bd-radius:1">전체</div>
-            <div class="p:1 pl:4 pr:4 bd bd-color:base-3 bd-radius:1">급여</div>
-            <div class="p:1 pl:4 pr:4 bd bd-color:base-3 bd-radius:1">용돈</div>
-            <div class="p:1 pl:4 pr:4 bd bd-color:base-3 bd-radius:1">기타</div>
+            <div class="btn btn-size:1 btn-color:main-2">전체</div>
+            <div class="btn btn-size:1 btn:outline">급여</div>
+            <div class="btn btn-size:1 btn:outline">용돈</div>
+            <div class="btn btn-size:1 btn:outline">기타</div>
         </div>
         <div class="d:flex fl-dir:column gap:2">
             <div class="card p:4 fl-dir:row ai:center w:10p">
@@ -86,7 +86,7 @@
             </label>
             <label>
                 <span>일자</span>
-                <input type="date" name="incDd" style="cursor: pointer" onclick="this.showPicker()" th:value="${#temporals.format(#temporals.createToday(), 'yyyy-MM-dd')}">
+                <input type="date" name="dd" style="cursor: pointer" onclick="this.showPicker()" th:value="${#temporals.format(#temporals.createToday(), 'yyyy-MM-dd')}">
             </label>
             <div class="d:flex gap:8">
                 <label class="fl-grow:1">
