--- a/src/main/resources/templates/expense.html
+++ b/src/main/resources/templates/expense.html
@@ -38,16 +38,14 @@
 
     <section class="d:flex fl-dir:column gap:8">
         <h1 class="d:none">지출 내역</h1>
-        <div class="card p:6 fs:5">
-            <div class="d:flex gap:2">
-                <div class="btn btn-size:1 btn-color:main-2">전체</div>
-                <div class="btn btn-size:1 btn:outline">식비</div>
-                <div class="btn btn-size:1 btn:outline">데이트</div>
-                <div class="btn btn-size:1 btn:outline">선물</div>
-            </div>
-            <div class="as:end fs:9">총 60,000원</div>
+        <div class="card fl-dir:row gap:2p:6 fs:5">
+            <div class="btn btn-size:1 btn-color:main-2">전체</div>
+            <div class="btn btn-size:1 btn:outline">식비</div>
+            <div class="btn btn-size:1 btn:outline">데이트</div>
+            <div class="btn btn-size:1 btn:outline">선물</div>
         </div>
         <div class="d:flex fl-dir:column gap:2">
+            <div class="as:end fs:9 pr:4">총 60,000원</div>
             <div class="card p:4 fl-dir:row ai:center w:10p">
                 <div class="d:flex fl-dir:column ai:center gap:2" style="width: 12%; max-width: 90px">
                     <div>04/21</div>
