Feat: 대시보드 카드대금 상세내역 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,6 +32,16 @@
                     <div class="title">미결제 카드대금</div>
                     <div class="value">430,000원</div>
                     <div class="desc">지난 달 + 이번 달 카드 대금 총합</div>
+                    <div>
+                        <div class="desc d:flex jc:space-between bd-bottom bd-color:base-3 p:2">
+                            <span>현대 코웨이</span>
+                            <span>300,000원</span>
+                        </div>
+                        <div class="desc d:flex jc:space-between bd-bottom bd-color:base-3 p:2">
+                            <span>현대 네이버페이</span>
+                            <span>300,000원</span>
+                        </div>
+                    </div>
                 </div>
             </a>
 
