--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -14,6 +14,10 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 
+    .grid .card{
+        height: 100%;
+    }
+
     .grid > h1{
         grid-column: 1 / -1;
         font-size: var(--font-size-11);
