--- a/src/main/resources/templates/fixed.html
+++ b/src/main/resources/templates/fixed.html
@@ -28,7 +28,7 @@
 
     <section class="d:flex fl-dir:column gap:8">
         <h1 class="d:none">비용 내역</h1>
-        <div class="card p:6 fl-dir:row gap:2 fs:5">
+        <div class="d:flex fl-dir:row gap:2 fs:5">
             <div class="btn btn-size:1 btn-color:main-2">전체</div>
             <div class="btn btn-size:1 btn:outline">미결제</div>
             <div class="btn btn-size:1 btn:outline">결제완료</div>
