Design: 카테고리 필터 버튼 디자인 변경 누락 추가

--- a/src/main/resources/templates/expense.html
+++ b/src/main/resources/templates/expense.html
@@ -36,9 +36,9 @@
         </div>
     </section>
 
-    <section class="d:flex fl-dir:column gap:8">
+    <section class="d:flex fl-dir:column gap:6">
         <h1 class="d:none">지출 내역</h1>
-        <div class="card fl-dir:row gap:2p:6 fs:5">
+        <div class="d:flex fl-dir:row gap:2 fs:5">
             <div class="btn btn-size:1 btn-color:main-2">전체</div>
             <div class="btn btn-size:1 btn:outline">식비</div>
             <div class="btn btn-size:1 btn:outline">데이트</div>
